@@ -1,8 +1,6 @@
 package com.assignment.distributedfilesharingapp.common;
 
-import com.sun.xml.internal.ws.commons.xmlutil.Converter;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Component;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
@@ -13,7 +11,7 @@ public class StringEncoderDecoder {
 
     public static String encode(String str) {
         try {
-            return URLEncoder.encode(str, Converter.UTF_8);
+            return URLEncoder.encode(str, "UTF-8");
         } catch (UnsupportedEncodingException e) {
             log.error("An error occurred while converting the text", e);
             return str;
@@ -22,7 +20,7 @@ public class StringEncoderDecoder {
 
     public static String decode(String str) {
         try {
-            return URLDecoder.decode(str, Converter.UTF_8);
+            return URLDecoder.decode(str, "UTF-8");
         } catch (UnsupportedEncodingException e) {
             log.error("An error occurred while converting the text", e);
             return str;
